Setup basic ui squeleton

--- a/.gitignore
+++ b/.gitignore
@@ -20,21 +20,11 @@ coverage
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-# Bower dependency directory (https://bower.io/)
-bower_components
-
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
-
 # Dependency directories
-node_modules/
-jspm_packages/
+/node_modules/
 
 # TypeScript v1 declaration files
 typings/
@@ -51,11 +41,8 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
-.yarn-integrity
 
 # dotenv environment variables file
 .env
 
-# next.js build output
-.next
+/.cache/
