--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,22 @@
 {
   "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "allowJs": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react",
     "jsxFactory": "h",
-    "allowSyntheticDefaultImports": true
-  }
+    "lib": [
+      "es6",
+      "es7",
+      "dom"
+    ]
+  },
+  "include": [
+    "src/**/*"
+  ],"exclude": [
+    "**/*.spec.ts"
+  ]
 }
