--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "dependencies": {
     "formik": "^0.11.11",
     "moment": "^2.22.2",
+    "openzeppelin-solidity": "1.11.0",
     "preact": "^8.2.9",
     "preact-compat": "^3.18.0",
     "preact-habitat": "^3.2.1",
     "react-datepicker": "^1.5.0",
+    "truffle-contract": "^3.0.6",
+    "web3": "^1.0.0-beta.34",
     "yup": "^0.25.1"
   },
   "alias": {
@@ -48,4 +51,3 @@
     ]
   }
 }
-
