--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,13 @@
     "lib": [
       "es6",
       "es7",
+      "es2017",
       "dom"
     ]
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "/build/"
   ],"exclude": [  
     "/dist/",
     "**/*.spec.ts"
