--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@types/jest": "^23.1.0",
     "@types/node": "^10.3.3",
     "@types/parcel-env": "0.0.0",
+    "@types/react-dom": "^16.0.7",
     "jest": "^23.1.0",
     "parcel-bundler": "^1.8.1",
-    "ts-jest": "^22.4.6",
-    "typescript": "^2.9.1"
+    "ts-jest": "^22.4.6"
   },
   "dependencies": {
-    "formik": "^0.11.11",
+    "formik": "^1.0.2",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "openzeppelin-solidity": "1.11.0",
@@ -29,8 +29,9 @@
     "preact-compat": "^3.18.0",
     "preact-habitat": "3.2.1",
     "react-datepicker": "^1.5.0",
+    "typescript": "^3.0.1",
     "web3": "1.0.0-beta.35",
-    "yup": "^0.25.1"
+    "yup": "^0.26.2"
   },
   "alias": {
     "react": "preact-compat",
