--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "parcel -p 8080 index.html",
     "build": "parcel build src/widget.ts -o scheduler-widget --no-source-maps",
-    "test": "jest",
-    "test-unit": "jest --watch --roots=src"
+    "test": "jest --watch"
   },
   "author": "Felipe Carlos Werlang",
   "license": "ISC",
