--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.0.7",
     "jest": "^23.1.0",
     "parcel-bundler": "^1.8.1",
+    "truffle-hdwallet-provider": "0.0.6",
     "ts-jest": "^22.4.6"
   },
   "dependencies": {
